fixed hamburger menu not dropping down on smaller screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,6 +58,8 @@ h2 {
 a.nav-link {
   color: var(--secondary-color);
   font-weight: bold;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 a.nav-link:hover {
